# rust-crypto

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  test.ion
examples/: symmetriccipher.rs
src/: aes.rs  aes_gcm.rs  aesni.rs  aessafe.rs  bcrypt.rs  bcrypt_pbkdf.rs  blake2b.rs  blake2s.rs  blockmodes.rs  blowfish.rs  chacha20.rs  chacha20poly1305.rs  cryptoutil.rs  curve25519.rs  ed25519.rs  fortuna.rs  ghash.rs  hc128.rs  hkdf.rs  hmac.rs  lib.rs  md5.rs  pbkdf2.rs  poly1305.rs  rc4.rs  ripemd160.rs  salsa20.rs  scrypt.rs  sha1.rs  sha2.rs  sha3.rs  sosemanuk.rs  step_by.rs  symmetriccipher.rs  threefish.rs  util.rs  whirlpool.rs
tests/: aes.rs
tools/: generate_aes_tests.lua
