[package]
name = "rust-crypto"
version = "0.2.37"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/niluxv/rust-crypto/"
repository = "https://github.com/niluxv/rust-crypto/"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = [ "Crypto", "MD5", "Sha1", "Sha2", "AES" ]
categories = ["cryptography"]
readme = "README.md"
build = "build.rs"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[lib]
name = "crypto"

[features]
with-bench = []

[build-dependencies]
cc = "^1.0"

[dependencies]
byteorder = "^1.3"
libc = "^0.2"
time = "^0.1"
rand = "^0.4"
rustc-serialize = "^0.3"
